--- a/src/global.less
+++ b/src/global.less
@@ -17,12 +17,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: hidden;
-  > div {
-    height: 100%;
-    > div {
-      height: 100%;
-    }
-  }
+  background-color: #f5f5f5;
   .ant-layout {
     height: 100%;
   }
@@ -47,6 +42,9 @@ li {
 }
 
 :global {
+  .hide_ele {
+    display: none;
+  }
   .auto-height {
     height: 100% !important;
   }
