--- a/src/pages/DataModelUiConfig/components/FormConfig/index.less
+++ b/src/pages/DataModelUiConfig/components/FormConfig/index.less
@@ -34,6 +34,7 @@
       right: 0;
       bottom: 0;
       left: 508px;
+      padding: 8px;
       // width: 200px;
       background-color: #fff;
     }
