--- a/src/pages/DataModelUiConfig/components/TableUiConfig/components/LeftSiderbar/index.less
+++ b/src/pages/DataModelUiConfig/components/TableUiConfig/components/LeftSiderbar/index.less
@@ -13,6 +13,17 @@
         float: right;
         cursor: pointer;
       }
+      .back-icon {
+        display: inline-block;
+        width: 40px;
+        margin-left: -8px;
+        font-size: 15px;
+        text-align: center;
+        &:hover {
+          background-color: #f5f5f5;
+          cursor: pointer;
+        }
+      }
     }
     .content {
       position: absolute;
