--- a/src/pages/DataModelUiConfig/components/FormConfig/components/LeftSiderbar/index.less
+++ b/src/pages/DataModelUiConfig/components/FormConfig/components/LeftSiderbar/index.less
@@ -37,6 +37,7 @@
         z-index: 10;
         width: 100%;
         height: 100%;
+        background-color: #fff;
         .list-items {
           .list-item {
             &:hover {
