--- a/src/components/Layout/ColumnLayout/index.less
+++ b/src/components/Layout/ColumnLayout/index.less
@@ -1,5 +1,7 @@
 .cascade-layout-wrapper {
   height: 100% !important;
+  overflow: hidden;
+  background-color: #f5f5f5;
   :global {
     .layout-col-center {
       background-color: rgba(245, 245, 245, 1);
@@ -15,8 +17,9 @@
         .ant-card-body {
           height: calc(100% - 57px);
           padding: 8px;
+
           /** 表格高度100% */
-          .suid-panel{
+          .suid-panel {
             height: 100% !important;
             .panel-body {
               height: 100% !important;
@@ -25,6 +28,11 @@
           }
         }
       }
+      .no-card-title {
+        .ant-card-body {
+          height: 100%;
+        }
+      }
     }
-  };
+  }
 }
