--- a/src/global.less
+++ b/src/global.less
@@ -185,4 +185,10 @@ li {
     flex-grow: 1;
     align-items: flex-start;
   }
+  .hor-ver-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
