--- a/src/pages/DataModelUiConfig/components/TreeUiConfig/components/LeftSiderbar/index.less
+++ b/src/pages/DataModelUiConfig/components/TreeUiConfig/components/LeftSiderbar/index.less
@@ -52,12 +52,18 @@
         padding: 0;
         list-style: none;
         .list-item {
+          position: relative;
           margin: 4px;
-          padding: 8px;
+          padding: 8px 60px 8px 8px;
+          overflow: hidden;
+          white-space: nowrap;
+          text-overflow: ellipsis;
           background-color: #f5f5f5;
           .list-item-extra {
+            position: absolute;
+            top: 6px;
+            right: 8px;
             display: none;
-            float: right;
           }
           &:hover {
             cursor: move;
