--- a/src/components/Layout/ColumnLayout/index.less
+++ b/src/components/Layout/ColumnLayout/index.less
@@ -6,6 +6,12 @@
     .layout-col-center {
       background-color: rgba(245, 245, 245, 1);
     }
+    .layout-right-col {
+      padding-right: 0 !important;
+    }
+    .layout-left-col {
+      padding-left: 0 !important;
+    }
     .layout-col {
       position: relative;
       height: 100% !important;
