--- a/src/components/ExtTreePreview/index.less
+++ b/src/components/ExtTreePreview/index.less
@@ -1,9 +1,9 @@
 .ext-tree-preview {
   height: 100%;
   :global {
-    .culumn-layout {
-      padding-top: 1px;
-    }
+    // .culumn-layout {
+    //   padding-top: 1px;
+    // }
     .detail-wrapper {
       padding: 0 20px;
     }
