--- a/src/pages/DataModelUiConfig/components/TreeUiConfig/components/Header/index.less
+++ b/src/pages/DataModelUiConfig/components/TreeUiConfig/components/Header/index.less
@@ -14,5 +14,9 @@
         cursor: pointer;
       }
     }
+    .ant-popover-open {
+      background-color: #f5f5f5 !important;
+      cursor: pointer;
+    }
   }
 }
