--- a/src/pages/DataModelUiConfig/components/FormConfig/components/LeftSiderbar/index.less
+++ b/src/pages/DataModelUiConfig/components/FormConfig/components/LeftSiderbar/index.less
@@ -89,6 +89,17 @@
               }
             }
           }
+          .ant-popover-open {
+            background-color: #efeaea;
+            visibility: visible !important;
+            cursor: pointer;
+            > i {
+              color: #1890ff;
+            }
+            > .del {
+              color: red;
+            }
+          }
           &:hover {
             cursor: move;
             user-select: none;
