--- a/src/pages/DataModelUiConfig/components/UiConfigPreview/index.less
+++ b/src/pages/DataModelUiConfig/components/UiConfigPreview/index.less
@@ -16,5 +16,12 @@
         }
       }
     }
+    .slot-col-wrapper {
+      .ant-card {
+        .ant-card-body {
+          padding: 0 8px !important;
+        }
+      }
+    }
   }
 }
