--- a/src/pages/DataModelUiConfig/components/FormConfig/components/LeftSiderbar/ExtComboTableUiConfig/index.less
+++ b/src/pages/DataModelUiConfig/components/FormConfig/components/LeftSiderbar/ExtComboTableUiConfig/index.less
@@ -66,6 +66,11 @@
           }
         }
       }
+      .no-move {
+        &:hover {
+          cursor: default;
+        }
+      }
     }
   }
 }
