--- a/src/components/ExtTreePreview/index.less
+++ b/src/components/ExtTreePreview/index.less
@@ -13,5 +13,13 @@
     .ant-descriptions-view {
       padding-left: 20px;
     }
+    .slot-col-wrapper {
+      padding-left: 2px !important;
+      .ant-card {
+        .ant-card-body {
+          padding: 0 8px !important;
+        }
+      }
+    }
   }
 }
