--- a/src/pages/DataModelUiConfig/components/ImportUiConfig/components/RightSiderbar/index.less
+++ b/src/pages/DataModelUiConfig/components/ImportUiConfig/components/RightSiderbar/index.less
@@ -24,13 +24,33 @@
           cursor: pointer;
         }
       }
+      .icon-wrapper {
+        display: inline-block;
+        width: 56px;
+        // height: 30px;
+        font-size: 20px;
+        text-align: center;
+        &:hover {
+          background-color: #f5f5f5;
+          cursor: pointer;
+          > i {
+            color: #1890ff;
+          }
+        }
+      }
     }
     .content {
       position: absolute;
       top: 46px;
       bottom: 0;
       width: 100%;
-
+      overflow: hidden;
+      .column-extra-cls {
+        padding-top: 1px;
+      }
+      .assigned-wrapper {
+        height: 100%;
+      }
       .un-assigned-wrapper {
         position: absolute;
         top: 0;
