--- a/src/pages/DataModelUiConfig/components/ExportUiConfig/components/LeftSiderbar/index.less
+++ b/src/pages/DataModelUiConfig/components/ExportUiConfig/components/LeftSiderbar/index.less
@@ -51,7 +51,7 @@
       top: 230px;
       bottom: 0;
       width: 100%;
-
+      overflow: hidden;
       .un-assigned-wrapper {
         position: absolute;
         top: 0;
