--- a/src/pages/DataModelUiConfig/components/ImportUiConfig/index.less
+++ b/src/pages/DataModelUiConfig/components/ImportUiConfig/index.less
@@ -27,7 +27,7 @@
       position: absolute;
       top: 64px;
       bottom: 0;
-      left: @left-width + @space-width;
+      left: 0;
       width: @center-width;
       background-color: #fff;
     }
