--- a/src/components/Layout/CascadeLayout/index.less
+++ b/src/components/Layout/CascadeLayout/index.less
@@ -27,8 +27,8 @@
         }
       }
     }
-    .ayout-col-left {
-      transition: all ease 5000ms;
+    .layout-col-left {
+      transition: width 5s ease;
     }
     .layout-col-right {
       .triangle {
