--- a/src/pages/MasterDataMaintain/index.less
+++ b/src/pages/MasterDataMaintain/index.less
@@ -14,5 +14,11 @@
     .empty-wrapper {
       margin-top: 200px;
     }
+    .ele-center {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100%;
+    }
   }
 }
