--- a/src/components/ExtTreePreview/index.less
+++ b/src/components/ExtTreePreview/index.less
@@ -1,5 +1,6 @@
 .ext-tree-preview {
   height: 100%;
+  overflow: hidden;
   :global {
     // .culumn-layout {
     //   padding-top: 1px;
@@ -14,10 +15,9 @@
       padding-left: 20px;
     }
     .slot-col-wrapper {
-      padding-left: 2px !important;
       .ant-card {
         .ant-card-body {
-          padding: 0 8px !important;
+          padding: 8px 8px !important;
         }
       }
     }
