--- a/src/components/ExtTreePreview/index.less
+++ b/src/components/ExtTreePreview/index.less
@@ -21,5 +21,28 @@
         }
       }
     }
+    .icon-wrapper {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      margin-left: 8px;
+      font-size: 20px;
+      text-align: center;
+      vertical-align: middle;
+      &:hover {
+        background-color: #f5f5f5;
+        cursor: pointer;
+        > i {
+          color: #1890ff;
+        }
+      }
+      &.ant-dropdown-open {
+        background-color: #f5f5f5;
+        cursor: pointer;
+        > i {
+          color: #1890ff;
+        }
+      }
+    }
   }
 }
