--- a/src/components/Layout/CascadeLayout/index.less
+++ b/src/components/Layout/CascadeLayout/index.less
@@ -33,21 +33,21 @@
     .layout-col-right {
       .triangle {
         position: absolute;
-        top: 50%;
-        left: -10px;
+        top: 27px;
+        left: 8px;
         z-index: 1000;
         // width: 21px;
         line-height: 21px;
         background-color: #fff;
-        box-shadow: 0 2px 8px 0 #aaa;
+        // box-shadow: 0 2px 8px 0 #aaa;
         transform: translateY(-50%);
         &:hover {
           cursor: pointer;
         }
       }
-      .shrinked_icon {
-        left: 8px;
-      }
+      // .shrinked_icon {
+      //   left: 8px;
+      // }
     }
   }
 }
