--- a/src/components/Layout/CascadeLayout/index.less
+++ b/src/components/Layout/CascadeLayout/index.less
@@ -31,23 +31,19 @@
       transition: width 5s ease;
     }
     .layout-col-right {
-      .triangle {
-        position: absolute;
-        top: 27px;
-        left: 8px;
-        z-index: 1000;
-        // width: 21px;
-        line-height: 21px;
-        background-color: #fff;
-        // box-shadow: 0 2px 8px 0 #aaa;
-        transform: translateY(-50%);
+      .icon-wrapper {
+        display: inline-block;
+        padding: 2px 6px;
+        text-align: center;
+        border-radius: 3px;
         &:hover {
+          background-color: #efeaea;
           cursor: pointer;
+          > i {
+            color: #1890ff;
+          }
         }
       }
-      // .shrinked_icon {
-      //   left: 8px;
-      // }
     }
   }
 }
