--- a/src/pages/MasterDataMaintain/index.less
+++ b/src/pages/MasterDataMaintain/index.less
@@ -20,5 +20,18 @@
       justify-content: center;
       height: 100%;
     }
+    .icon-container {
+      display: inline-block;
+      width: 32px;
+      height: 32px;
+      margin-top: -1px;
+      line-height: 32px;
+      text-align: center;
+      vertical-align: middle;
+      border-radius: 2px;
+      &:hover {
+        background-color: #efeaea;
+      }
+    }
   }
 }
