--- a/src/pages/MasterDataMaintain/components/ChildTable/index.less
+++ b/src/pages/MasterDataMaintain/components/ChildTable/index.less
@@ -3,6 +3,10 @@
   flex-direction: column;
   height: 100%;
   :global {
+    .show-number {
+      padding: 0 10px;
+      font-size: 20px;
+    }
     .content {
       flex: 1;
       overflow: hidden;
