--- a/src/pages/MasterDataMaintain/components/ChildTable/index.less
+++ b/src/pages/MasterDataMaintain/components/ChildTable/index.less
@@ -7,6 +7,9 @@
       padding: 0 10px;
       font-size: 20px;
     }
+    .horizontal-space {
+      padding: 0 10px;
+    }
     .content {
       flex: 1;
       overflow: hidden;
