--- a/src/pages/DataShare/components/ParentTable/index.less
+++ b/src/pages/DataShare/components/ParentTable/index.less
@@ -37,6 +37,12 @@
           margin-bottom: -50px;
         }
       }
+      &.selected {
+        .icon-wrapper {
+          display: inline-block;
+          margin-bottom: -50px;
+        }
+      }
     }
   }
 }
