--- a/src/global.less
+++ b/src/global.less
@@ -104,6 +104,11 @@ li {
           }
           &.ant-popover-open:hover,
           &.ant-popover-open {
+            color: @primary-color;
+            background-color: fade(@black, 5%);
+          }
+          &.ant-popover-open.del:hover,
+          &.ant-popover-open.del {
             color: @error-color;
             background-color: fade(@error-color, 15%);
           }
