--- a/src/pages/DataShare/components/ParentTable/index.less
+++ b/src/pages/DataShare/components/ParentTable/index.less
@@ -15,6 +15,7 @@
       line-height: 30px;
       text-align: center;
       vertical-align: middle;
+      border: 1px solid rgba(0, 0, 0, 0.05);
       border-radius: 4px;
       visibility: hidden;
       &:hover {
