--- a/src/components/ProLayout/SiderBar/index.less
+++ b/src/components/ProLayout/SiderBar/index.less
@@ -14,6 +14,9 @@
       border-top-left-radius: 2px;
       border-bottom-left-radius: 2px;
       cursor: pointer;
+      &:hover {
+        background-color: rgba(199, 193, 193, 0.3);
+      }
     }
     .collapse-icon-middle {
       top: 50%;
