--- a/src/components/PopoverIcon/index.less
+++ b/src/components/PopoverIcon/index.less
@@ -1,4 +1,5 @@
 @background-color: rgba(0, 0, 0, 0.05);
+@del-background-color: rgba(245, 34, 45, 0.15);
 @color: #1890ff;
 @delcolor: red;
 
@@ -15,6 +16,7 @@
     &.del:hover,
     &.del.ant-popover-open {
       color: @delcolor;
+      background-color: @del-background-color;
     }
   }
 }
