--- a/src/components/PopoverIcon/index.less
+++ b/src/components/PopoverIcon/index.less
@@ -1,7 +1,9 @@
 @background-color: rgba(0, 0, 0, 0.05);
 @del-background-color: rgba(245, 34, 45, 0.15);
-@color: #1890ff;
-@delcolor: red;
+@warn-background-color: rgba(255, 213, 145, 0.15);
+@color: rgba(24, 144, 255, 1);
+@delcolor: rgba(255, 0, 0, 1);
+@warnColor: rgba(250, 140, 22, 1);
 
 :global {
   .popover-icon {
@@ -17,6 +19,11 @@
     &.del.ant-popover-open {
       color: @delcolor;
       background-color: @del-background-color;
+    }
+    &.warn:hover,
+    &.warn.ant-popover-open {
+      color: @warnColor;
+      background-color: @warn-background-color;
     }
   }
 }
