--- a/src/components/PopoverIcon/index.less
+++ b/src/components/PopoverIcon/index.less
@@ -10,6 +10,7 @@
     padding: 9px;
     font-size: 14px;
     border-radius: 4px;
+    cursor: pointer;
     &:hover,
     &.ant-popover-open {
       color: @color;
