--- a/src/pages/DataSharedDiagram/components/ParentTable/index.less
+++ b/src/pages/DataSharedDiagram/components/ParentTable/index.less
@@ -1,12 +1,5 @@
-.container-box {
-  height: 100%;
+.page-wrapper {
   :global {
-    .ele-center {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-    }
     .ant-select {
       max-width: 150px;
       .ant-select-selection {
@@ -22,6 +15,9 @@
           color: rgba(0, 0, 0, 0.85);
         }
       }
+    }
+    .suid-list-card-tool-box {
+      padding: 0 8px !important;
     }
   }
 }
