--- a/src/pages/MasterDataMaintain/components/ParentTable/index.less
+++ b/src/pages/MasterDataMaintain/components/ParentTable/index.less
@@ -5,4 +5,9 @@
   padding: 0;
   overflow: hidden;
   background-color: @page-background-color;
+  :global {
+    .suid-list-card-tool-box {
+      padding: 0 8px !important;
+    }
+  }
 }
