--- a/src/pages/DataShare/components/ParentTable/index.less
+++ b/src/pages/DataShare/components/ParentTable/index.less
@@ -6,6 +6,9 @@
   overflow: hidden;
   background-color: @page-background-color;
   :global {
+    .suid-list-card-tool-box {
+      padding: 0 8px !important;
+    }
     .icon-wrapper {
       margin-right: 8px;
       margin-bottom: -50px;
