--- a/src/pages/Semanteme/components/SemantemeTypeTable/index.less
+++ b/src/pages/Semanteme/components/SemantemeTypeTable/index.less
@@ -4,4 +4,9 @@
   padding: 0;
   overflow: hidden;
   background-color: @page-background-color;
+  :global {
+    .suid-list-card-tool-box {
+      padding: 0 8px !important;
+    }
+  }
 }
