--- a/src/pages/DataShare/components/ParentTable/index.less
+++ b/src/pages/DataShare/components/ParentTable/index.less
@@ -17,6 +17,7 @@
       transition: all ease-in 0.2s;
       &.ant-popover-open {
         visibility: visible;
+        opacity: 1;
       }
     }
     .ant-list-item {
