--- a/src/pages/DataModelUiConfig/components/FormConfig/components/FormEleCfg/index.less
+++ b/src/pages/DataModelUiConfig/components/FormConfig/components/FormEleCfg/index.less
@@ -115,6 +115,10 @@
           //   cursor: pointer;
           // }
         }
+        .list-item-selected {
+          color: #1890ff;
+          background-color: #e6f7ff;
+        }
       }
     }
   }
