--- a/src/pages/DataModelUiConfig/components/TableUiConfig/components/TableColCfg/index.less
+++ b/src/pages/DataModelUiConfig/components/TableUiConfig/components/TableColCfg/index.less
@@ -82,6 +82,10 @@
             }
           }
         }
+        .list-item-selected {
+          color: #1890ff;
+          background-color: #e6f7ff;
+        }
       }
     }
   }
